@@ -1,12 +1,16 @@
 package it.pagopa.selfcare.commons.base.security;
 
+import it.pagopa.selfcare.commons.utils.TestUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.function.Executable;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
 
-import static it.pagopa.selfcare.commons.base.security.Authority.TECH_REF;
+import static it.pagopa.selfcare.commons.base.security.Authority.ADMIN;
+import static it.pagopa.selfcare.commons.base.security.Authority.LIMITED;
 import static org.junit.jupiter.api.Assertions.*;
 
 class SelfCareGrantedAuthorityTest {
@@ -14,9 +18,9 @@ class SelfCareGrantedAuthorityTest {
     @Test
     void SelfCareGrantedAuthority_KoNullRole() {
         // given
-        String role = null;
+        Collection<ProductGrantedAuthority> roleOnProducts = null;
         // when
-        Executable executable = () -> new SelfCareGrantedAuthority(role);
+        Executable executable = () -> new SelfCareGrantedAuthority(roleOnProducts);
         // then
         assertThrows(IllegalArgumentException.class, executable);
     }
@@ -25,60 +29,45 @@ class SelfCareGrantedAuthorityTest {
     @Test
     void SelfCareGrantedAuthority_KoEmptyRole() {
         // given
-        String role = "";
+        Collection<ProductGrantedAuthority> roleOnProducts = Collections.emptyList();
         // when
-        Executable executable = () -> new SelfCareGrantedAuthority(role);
+        Executable executable = () -> new SelfCareGrantedAuthority(roleOnProducts);
         // then
         assertThrows(IllegalArgumentException.class, executable);
     }
 
 
     @Test
-    void getAuthority() {
+    void getAuthority_ADMIN() {
         // given
-        String role = "role";
+        ProductGrantedAuthority productRole1 =
+                TestUtils.mockInstance(new ProductGrantedAuthority(ADMIN, "", ""), 1);
+        ProductGrantedAuthority productRole2 =
+                TestUtils.mockInstance(new ProductGrantedAuthority(LIMITED, "", ""), 2);
+        Collection<ProductGrantedAuthority> roleOnProducts =
+                List.of(productRole1, productRole2);
         // when
-        SelfCareGrantedAuthority grantedAuthority = new SelfCareGrantedAuthority(role);
+        SelfCareGrantedAuthority grantedAuthority = new SelfCareGrantedAuthority(roleOnProducts);
         // then
-        assertEquals(role, grantedAuthority.getAuthority());
+        assertEquals(ADMIN.name(), grantedAuthority.getAuthority());
+        assertIterableEquals(new HashSet<>(roleOnProducts), new HashSet<>(grantedAuthority.getRoleOnProducts()));
     }
 
 
     @Test
-    void getProducts_notProductBasedAuthority() {
+    void getAuthority_LIMITED() {
         // given
-        String role = "role";
-        Collection<String> products = Collections.singletonList("product");
+        ProductGrantedAuthority productRole1 =
+                TestUtils.mockInstance(new ProductGrantedAuthority(LIMITED, "", ""), 1);
+        ProductGrantedAuthority productRole2 =
+                TestUtils.mockInstance(new ProductGrantedAuthority(LIMITED, "", ""), 2);
+        Collection<ProductGrantedAuthority> roleOnProducts =
+                List.of(productRole1, productRole2);
         // when
-        SelfCareGrantedAuthority grantedAuthority = new SelfCareGrantedAuthority(role, products);
+        SelfCareGrantedAuthority grantedAuthority = new SelfCareGrantedAuthority(roleOnProducts);
         // then
-        assertNull(grantedAuthority.getProducts());
-    }
-
-
-    @Test
-    void getProducts_productBasedAuthorityWithNullProducts() {
-        // given
-        String role = TECH_REF.name();
-        // when
-        SelfCareGrantedAuthority grantedAuthority = new SelfCareGrantedAuthority(role, null);
-        // then
-        assertNotNull(grantedAuthority.getProducts());
-        assertTrue(grantedAuthority.getProducts().isEmpty());
-    }
-
-
-    @Test
-    void getProducts_productBasedAuthorityWithNotNullProducts() {
-        // given
-        String role = TECH_REF.name();
-        Collection<String> products = Collections.singletonList("product");
-        // when
-        SelfCareGrantedAuthority grantedAuthority = new SelfCareGrantedAuthority(role, products);
-        // then
-        assertNotNull(grantedAuthority.getProducts());
-        assertFalse(grantedAuthority.getProducts().isEmpty());
-        assertIterableEquals(products, grantedAuthority.getProducts());
+        assertEquals(LIMITED.name(), grantedAuthority.getAuthority());
+        assertIterableEquals(new HashSet<>(roleOnProducts), new HashSet<>(grantedAuthority.getRoleOnProducts()));
     }
 
 }
